Fix card alignment

--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -1759,6 +1759,7 @@ between lines
 a.card {
   position: relative;
   display: inline-block;
+  vertical-align: top;
   width: 25.5rem;
   max-width: 100%;
   padding: 0;
